sys/prebuilt-bindings/geos_3.13.rs

extern "C" {
    pub fn GEOSGeom_getCoordSeq(g: *const GEOSGeometry) -> *const GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSGeom_getDimensions(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getCoordinateDimension(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMin(g: *const GEOSGeometry, value: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMin(g: *const GEOSGeometry, value: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMax(g: *const GEOSGeometry, value: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMax(g: *const GEOSGeometry, value: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getExtent(
        g: *const GEOSGeometry,
        xmin: *mut libc::c_double,
        ymin: *mut libc::c_double,
        xmax: *mut libc::c_double,
        ymax: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetPointN(g: *const GEOSGeometry, n: libc::c_int) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetStartPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetEndPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSisEmpty(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisRing(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSHasZ(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSHasM(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisClosed(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSSetSRID(g: *mut GEOSGeometry, SRID: libc::c_int);
}
extern "C" {
    pub fn GEOSGeom_setUserData(g: *mut GEOSGeometry, userData: *mut libc::c_void);
}
extern "C" {
    pub fn GEOSNormalize(g: *mut GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSOrientPolygons(g: *mut GEOSGeometry, exteriorCW: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn GEOSisSimple(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisValid(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisValidReason(g: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSisValidDetail(
        g: *const GEOSGeometry,
        flags: libc::c_int,
        reason: *mut *mut libc::c_char,
        location: *mut *mut GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSMakeValid(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMakeValidWithParams(
        g: *const GEOSGeometry,
        makeValidParams: *const GEOSMakeValidParams,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMakeValidParams_create() -> *mut GEOSMakeValidParams;
}
extern "C" {
    pub fn GEOSMakeValidParams_destroy(parms: *mut GEOSMakeValidParams);
}
extern "C" {
    pub fn GEOSMakeValidParams_setMethod(
        p: *mut GEOSMakeValidParams,
        method: GEOSMakeValidMethods,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSMakeValidParams_setKeepCollapsed(
        p: *mut GEOSMakeValidParams,
        keepCollapsed: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSMinimumClearance(g: *const GEOSGeometry, d: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSMinimumClearanceLine(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSRemoveRepeatedPoints(
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSArea(g: *const GEOSGeometry, area: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSLength(g: *const GEOSGeometry, length: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetLength(g: *const GEOSGeometry, length: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistanceWithin(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: libc::c_double,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSDistanceIndexed(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSNearestPoints(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSHausdorffDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: libc::c_double,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: libc::c_double,
        dist: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSProject(line: *const GEOSGeometry, point: *const GEOSGeometry) -> libc::c_double;
}
extern "C" {
    pub fn GEOSInterpolate(line: *const GEOSGeometry, d: libc::c_double) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSProjectNormalized(
        line: *const GEOSGeometry,
        point: *const GEOSGeometry,
    ) -> libc::c_double;
}
extern "C" {
    pub fn GEOSInterpolateNormalized(
        line: *const GEOSGeometry,
        proportion: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSIntersection(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSIntersectionPrec(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDifference(ga: *const GEOSGeometry, gb: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDifferencePrec(
        ga: *const GEOSGeometry,
        gb: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSymDifference(ga: *const GEOSGeometry, gb: *const GEOSGeometry)
        -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSymDifferencePrec(
        ga: *const GEOSGeometry,
        gb: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnion(ga: *const GEOSGeometry, gb: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnionPrec(
        ga: *const GEOSGeometry,
        gb: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnaryUnion(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnaryUnionPrec(
        g: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDisjointSubsetUnion(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSClipByRect(
        g: *const GEOSGeometry,
        xmin: libc::c_double,
        ymin: libc::c_double,
        xmax: libc::c_double,
        ymax: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSharedPaths(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBuffer(
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBufferParams_create() -> *mut GEOSBufferParams;
}
extern "C" {
    pub fn GEOSBufferParams_destroy(parms: *mut GEOSBufferParams);
}
extern "C" {
    pub fn GEOSBufferParams_setEndCapStyle(
        p: *mut GEOSBufferParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setJoinStyle(
        p: *mut GEOSBufferParams,
        joinStyle: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setMitreLimit(
        p: *mut GEOSBufferParams,
        mitreLimit: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setQuadrantSegments(
        p: *mut GEOSBufferParams,
        quadSegs: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setSingleSided(
        p: *mut GEOSBufferParams,
        singleSided: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferWithParams(
        g: *const GEOSGeometry,
        p: *const GEOSBufferParams,
        width: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBufferWithStyle(
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
        endCapStyle: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSOffsetCurve(
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSCoverageUnion(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSCoverageIsValid(
        input: *const GEOSGeometry,
        gapWidth: libc::c_double,
        invalidEdges: *mut *mut GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoverageSimplifyVW(
        input: *const GEOSGeometry,
        tolerance: libc::c_double,
        preserveBoundary: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSEnvelope(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBoundary(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConvexHull(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHull(
        g: *const GEOSGeometry,
        ratio: libc::c_double,
        allowHoles: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHullByLength(
        g: *const GEOSGeometry,
        length: libc::c_double,
        allowHoles: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHullOfPolygons(
        g: *const GEOSGeometry,
        lengthRatio: libc::c_double,
        isTight: libc::c_uint,
        isHolesAllowed: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonHullSimplify(
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        vertexNumFraction: libc::c_double,
    ) -> *mut GEOSGeometry;
}
pub const GEOSPolygonHullParameterModes_GEOSHULL_PARAM_VERTEX_RATIO: GEOSPolygonHullParameterModes =
    1;
pub const GEOSPolygonHullParameterModes_GEOSHULL_PARAM_AREA_RATIO: GEOSPolygonHullParameterModes =
    2;
pub type GEOSPolygonHullParameterModes = libc::c_uint;
extern "C" {
    pub fn GEOSPolygonHullSimplifyMode(
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        parameterMode: libc::c_uint,
        parameter: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumRotatedRectangle(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMaximumInscribedCircle(
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSLargestEmptyCircle(
        obstacles: *const GEOSGeometry,
        boundary: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumWidth(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPointOnSurface(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
